force-app/main/default/objects/Intel_Job_Skill__c/Intel_Job_Skill__c.object-meta.xml
<CustomObject>
    <label>Intel Job Skill</label>
    <nameField>
        <displayFormat>IJS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intel Job Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>