force-app/main/default/objects/Intel_Job_Skill__c/fields/Intel_Skill__c.field-meta.xml
<CustomField>
    <fullName>Intel_Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intel Skill</label>
    <referenceTo>Intel_Skill__c</referenceTo>
    <relationshipLabel>Intel Job Skills</relationshipLabel>
    <relationshipName>Intel_Job_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>