force-app/main/default/objects/Intel_Job_Skill__c/fields/Skill_Category__c.field-meta.xml
<CustomField>
    <fullName>Skill_Category__c</fullName>
    <formula>TEXT( Intel_Skill__r.Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill Category</label>
    <type>Text</type>
</CustomField>