force-app/main/default/objects/Intel_Job_Skill__c/fields/Skill_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Name__c</fullName>
    <formula>Intel_Skill__r.Intel_Skill_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill Name</label>
    <type>Text</type>
</CustomField>